feat(用例管理): 脑图自定义字段保存调整